fix(sticky): Add z-index to ensure relatively positioned elements further down the document tree are not visible over sticky elements

--- a/src/components/base/Base.css
+++ b/src/components/base/Base.css
@@ -126,4 +126,5 @@
 
 .ax-sticky {
   position: sticky;
+  z-index: var(--z-index-sticky);
 }
