--- a/src/materials/layout.css
+++ b/src/materials/layout.css
@@ -7,5 +7,6 @@
   --z-index-platform: 1;
   --z-index-position: 2;
   --z-index-modal: 2;
+  --z-index-sticky: 2;
   --z-index-notifications: 3;
 }
